modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link 
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@700&family=Inter:wght@300;500&family=JetBrains+Mono&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"
     >
@@ -43,29 +45,21 @@
               src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
               />
             </a>
-            <a
-            href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/"
-            target="_blank"
-            >
+            <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/" target="_blank">
               <img
               src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
               />
             </a>
-              <!-- <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
-                <img
-                src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white"
-                />
-              </a> -->
-              <a href="https://leetcode.com/omelette-bio/" target="_blank">
-                <img
-                src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
-                />
-              </a>
-              <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
-                <img
-                src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
-                />
-              </a>
+            <a href="https://leetcode.com/omelette-bio/" target="_blank">
+              <img
+              src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
+              />
+            </a>
+            <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
+              <img
+              src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
+              />
+            </a>
           </div>
           </div>
         </div>
@@ -73,12 +67,12 @@
     <section>
       <div class="sub-section">
         <h2 id="blue-text">// À propos //</h2>
-        <p>
+        <p class="test">
           <br />
-          Étudiant en L3 informatique à l’Université Côte d’Azur. Je suis
-          passionné par l’informatique et les nouvelles technologies, plus
+          Étudiant en L3 informatique d’Université Côte d’Azur, je suis
+          passionné par l’informatique et les nouvelles technologies, et plus
           particulièrement dans le développement bas niveau ainsi que
-          l'architecture des ordinateurs, et je suis également passionné par les
+          l'architecture des ordinateurs<br>Je suis également passionné par les
           jeux vidéos, les mangas et écouter de la musique.
       </p>
       </div>
@@ -120,31 +114,6 @@
           </article>
         </article>
         <article>
-          <h3>Os</h3>
-          <article>
-            <img
-              src="https://img.shields.io/badge/Debian-A81D33?style=for-the-badge&logo=debian&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
-            />
-          </article>
-        </article>
-        <article>
-          <h3>IDE</h3>
-          <article>
-            <img
-              src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/NeoVim-%2357A143.svg?&style=for-the-badge&logo=neovim&logoColor=white"
-            />
-          </article>
-        </article>
-        <article>
           <h3>Text formating</h3>
           <article>
             <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"> 
@@ -170,9 +139,6 @@
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
             <h3 class="link">Bataille Navale [12.2022]</h3>
-            <img
-              src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
-            />
           </a>
           <p>
             Projet de fin de semestre de l'ue structures de données et
@@ -182,9 +148,7 @@
         <article>
           <a href="https://github.com/omelette-bio/mrsync">
             <h3 class="link">mrsync [05.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
+            
           </a>
           <p>
             Projet de fin de semestre de l'ue programmation système, consistant
@@ -194,9 +158,7 @@
         <article>
           <a href="https://github.com/omelette-bio/projet-concept-ia">
             <h3 class="link">Concepts IA [05.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
+            
           </a>
           <p>
             Projet de fin de semestre de l'ue concepts de l'intelligence
@@ -207,9 +169,6 @@
         <article>
           <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
             <h3 class="link">RPG textuel [09.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-            />
           </a>
           <p>
             Premier projet de l'ue programmation et conception orientée objet, consistant à
@@ -220,9 +179,6 @@
         <article>
           <a href="#">
             <h3 class="link">Convertisseur Midi -> wav [10.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-            />
           </a>
           <p>
             Deuxième projet de l'ue programmation et conception orientée objet, consistant à
@@ -237,9 +193,6 @@
         <article>
           <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">
             <h3 class="link">Potit blagueur pouete pouete [04.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
           </a>
           <p>
             Bot discord en python permettant de faire des blagues avec l'api blagues ainsi que de répondre feur.
@@ -248,9 +201,6 @@
         <article>
           <a href="https://github.com/omelette-bio/gamepass2lghub">
             <h3 class="link">gamepass to lghub [08.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
           </a>
           <p>
             Programme python permettant d'ajouter des jeux Xbox Gamepass à Logitech G Hub, afin de sauvegarder ses paramètres de jeux.
@@ -260,9 +210,6 @@
         <article>
           <a href="https://github.com/omelette-bio/cow_discord_bot">
             <h3 class="link">Cow interpreter discord bot [09.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
           </a>
           <p>
             Bot discord en python permettant d'intérpreter du code cow, soit en l'écrivant dans un message, soit en envoyant un fichier.
@@ -271,15 +218,6 @@
         <article>
           <a href="https://ieba2.github.io/HydroSharks-website/">
             <h3 class="link">Site web HydroSharks Seatech [11.2023]</h3>
-            <img
-              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
-            />
           </a>
           <p>
             Conception d'un site web pour l'association étudiante HydroSharks SeaTech basée à l'Université de Toulon.
