modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
     </header>
     <section>
       <div class="sub-section">
-        <h2 id="blue-text">// À propos //</h2>
+        <h2 id="blue-text">[ À propos ]</h2>
         <p class="test">
-          <br />
           Étudiant en L3 informatique d’Université Côte d’Azur, je suis
           passionné par l’informatique et les nouvelles technologies, et plus
           particulièrement dans le développement bas niveau ainsi que
@@ -78,51 +77,37 @@
       </div>
       <!-- compétences -->
       <div class="sub-section">
-        <h2 id="blue-text">// Compétences //</h2>
-        <article>
-          <h3>Frontend</h3>
-          <article>
-            <img
-              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
-            />
-          </article>
-        </article>
-        <article>
-          <h3>Programmation</h3>
-          <article>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
-            />
-          </article>
-        </article>
-        <article>
-          <h3>Text formating</h3>
-          <article>
-            <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"> 
-          </article>
-        </article>
+        <h2 id="blue-text">[ Compétences ]</h2>
+        <ul>
+          <li>
+            <h3>Frontend</h3>
+            <div class="comps">
+              <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+              <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+              <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/>  
+            </div>
+          </li>
+          <li>
+            <h3>Programmation</h3>
+            <div class="comps">
+              <img src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"/>
+              <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"/>
+              <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+              <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
+              <img src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"/>
+            </div>
+          </li>
+          <li>
+            <h3>Text formatting</h3>
+            <div class="comps">
+              <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"/>
+            </div>
+          </li>
+        </ul>
       </div>
       <!-- formations -->
       <div class="sub-section">
-        <h2 id="blue-text">// Formations //</h2>
+        <h2 id="blue-text">[ Formations ]</h2>
         <article>
           <a href="https://upinfo.univ-cotedazur.fr">
             <h3 class="link">Université Nice Côte d'Azur [2021 - 2024]</h3>
@@ -135,7 +120,7 @@
 
       <!-- projets univ -->
       <div class="sub-section">
-        <h2 id="blue-text">// Projets Universitaires //</h2>
+        <h2 id="blue-text">[ Projets Universitaires ]</h2>
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
             <h3 class="link">Bataille Navale [12.2022]</h3>
@@ -189,7 +174,7 @@
       </div>
       <!-- projets perso -->
       <div class="sub-section">
-        <h2 id="blue-text">// Projets personnels //</h2>
+        <h2 id="blue-text">[ Projets personnels ]</h2>
         <article>
           <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">
             <h3 class="link">Potit blagueur pouete pouete [04.2023]</h3>
