modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
   </head>
   <body>
     <header>
-      <div class="header">
+      <div class="header flex-row-center">
         <img class="round" src="docs/icon.jpg" />
         <div class="mt2">
-          <p class="sub-text" id="blue-text">// omelette-bio //</p>
+          <p class="sub-text color1">[ omelette-bio ]</p>
           <h1>Francois Flandin</h1>
           <p class="sub-text" id="gray-text">
             Étudiant en L3 info d’Université Côte d’Azur
           </p>
           <div>
-            <br />
-            <a href="docs/cv_light.pdf" download>
+            <ul class="links color3">
+              <li>[ <a>mon cv</a> ]</li>
+              <li>[ <a>github</a> ]</li>
+              <li>[ <a>linkedin</a> ]</li>
+            </ul>
+            <!-- <a href="docs/cv_light.pdf" download>
               <img
               src="https://img.shields.io/badge/mon%20cv-EA4C89?style=for-the-badge"
               />
@@ -59,14 +63,14 @@
               <img
               src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
               />
-            </a>
+            </a> -->
           </div>
           </div>
         </div>
     </header>
     <section>
       <div class="sub-section">
-        <h2 id="blue-text">// À propos //</h2>
+        <h2 class="color1">À propos</h2>
         <p class="test">
           <br />
           Étudiant en L3 informatique d’Université Côte d’Azur, je suis
@@ -78,51 +82,42 @@
       </div>
       <!-- compétences -->
       <div class="sub-section">
-        <h2 id="blue-text">// Compétences //</h2>
-        <article>
-          <h3>Frontend</h3>
-          <article>
-            <img
-              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
-            />
-          </article>
-        </article>
-        <article>
-          <h3>Programmation</h3>
-          <article>
-            <img
-              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-            />
-            <img
-              src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
-            />
-          </article>
-        </article>
-        <article>
-          <h3>Text formating</h3>
-          <article>
-            <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"> 
-          </article>
-        </article>
+        <h2 class="color1">Compétences</h2>
+        <ul class="comps">
+          <li>[ Frontend ] HTML, CSS, JAVASCRIPT</li>
+          <li>[ Programmation ] Python, Rust, C, Java, Ocaml</li>
+          <li>[ Langues ] Anglais (B2)</li>
+        </ul>
+        <!-- <ul>
+          <li>
+            <h3>Frontend:</h3>
+            <div class="comps">
+              <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+              <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+              <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/>
+            </div>
+          </li>
+          <li>
+            <h3>Programmation:</h3>
+            <div class="comps">
+              <img src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"/>
+              <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"/>
+              <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+              <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
+              <img src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"/>
+            </div>
+          </li>
+          <li>
+            <h3>Text formatting:</h3>
+            <div class="comps">
+              <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"/>
+            </div>
+          </li>
+        </ul> -->
       </div>
       <!-- formations -->
       <div class="sub-section">
-        <h2 id="blue-text">// Formations //</h2>
+        <h2 class="color1">Formations</h2>
         <article>
           <a href="https://upinfo.univ-cotedazur.fr">
             <h3 class="link">Université Nice Côte d'Azur [2021 - 2024]</h3>
@@ -135,7 +130,7 @@
 
       <!-- projets univ -->
       <div class="sub-section">
-        <h2 id="blue-text">// Projets Universitaires //</h2>
+        <h2 class="color1">Projets Universitaires</h2>
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
             <h3 class="link">Bataille Navale [12.2022]</h3>
@@ -188,8 +183,8 @@
         </article>
       </div>
       <!-- projets perso -->
-      <div class="sub-section">
-        <h2 id="blue-text">// Projets personnels //</h2>
+      <!-- <div class="sub-section">
+        <h2 class="color1">Projets personnels</h2>
         <article>
           <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">
             <h3 class="link">Potit blagueur pouete pouete [04.2023]</h3>
@@ -224,7 +219,7 @@
           </p>
           </h3>
         </article>
-      </div>
+      </div> -->
 
     </section>
     <footer>
