modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="mt2">
           <p class="sub-text color1">[ omelette-bio ]</p>
           <h1>Francois Flandin</h1>
-          <p class="sub-text" id="gray-text">
+          <p class="sub-text color2">
             Étudiant en L3 info d’Université Côte d’Azur
           </p>
           <div>
@@ -83,8 +83,24 @@
       <div class="sub-section">
         <h2 class="color1">Compétences</h2>
         <ul class="comps">
-          <li>[ Frontend ] HTML, CSS, JAVASCRIPT</li>
-          <li>[ Programmation ] Python, Rust, C, Java, Ocaml</li>
+          <li>[ Frontend ]</li>
+          <li>
+            <p>
+              <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
+              <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
+              <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/>
+            </p>
+          </li>
+          <li>[ Programmation ]</li>
+          <li>
+            <p>
+              <img src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"/>
+              <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"/>
+              <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
+              <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
+              <img src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"/>
+            </p>
+          </li>
           <li>[ Langues ] Anglais (B2)</li>
         </ul>
         <!-- <ul>
@@ -222,7 +238,15 @@
 
     </section>
     <footer>
-      <div>
+      <ul class="links color3">
+        <li>
+          [ <a href="mailto:flandinfrancois@proton.me">mail</a>]
+          [ <a href="https://steamcommunity.com/id/omelette-bio/">steam</a>]
+          [ <a href="https://open.spotify.com/user/zezwiafwzq7l4pl1onljkzcqz?si=db177d2914164c6e">spotify</a>]
+          [ <a href="https://discordapp.com/users/381898390662807565">discord</a>]
+        </li>
+      </ul>
+      <!-- <div>
         <a href="mailto:flandinfrancois@proton.me">
           <img
             src="https://img.shields.io/badge/ProtonMail-8B89CC?style=for-the-badge&logo=protonmail&logoColor=white"
@@ -252,8 +276,8 @@
             src="https://img.shields.io/badge/Spotify-1ED760?style=for-the-badge&logo=spotify&logoColor=white"
           />
         </a>
-      </div>
-      <p class="bottom-text" id="gray-text">Développé par Francois Flandin</p>
+      </div> -->
+      <p class="bottom-text color2">Développé par Francois Flandin</p>
     </footer>
   </body>
 </html>
