modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </p>
           <div>
             <ul class="links color3">
-              <li>[ <a>mon cv</a> ]</li>
-              <li>[ <a>github</a> ]</li>
+              <li>[ <a href="docs/cv_light.pdf" download target="_blank">mon cv</a> ]</li>
+              <li>[ <a href="https://github.com/omelette-bio" target="_blank">github</a> ]</li>
               <li>[ <a>linkedin</a> ]</li>
             </ul>
             <!-- <a href="docs/cv_light.pdf" download>
