modified:   docs/cv_light.pdf 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,60 +25,47 @@
   </head>
   <body>
     <header>
-      <div class="header flex-row-center">
-        <img class="round" src="docs/icon.jpg" />
-        <div class="mt2">
-          <p class="sub-text color1">[ omelette-bio ]</p>
-          <h1>Francois Flandin</h1>
-          <p class="sub-text color2">
-            Étudiant en L3 info d’Université Côte d’Azur
-          </p>
-          <div>
-            <ul class="links color3">
-              <li>[ <a href="docs/cv_light.pdf" download target="_blank">mon cv</a> ]</li>
-              <li>[ <a href="https://github.com/omelette-bio" target="_blank">github</a> ]</li>
-              <li>[ <a>linkedin</a> ]</li>
-            </ul>
-            <!-- <a href="docs/cv_light.pdf" download>
-              <img
-              src="https://img.shields.io/badge/mon%20cv-EA4C89?style=for-the-badge"
-              />
-            </a>
-            <a href="https://github.com/omelette-bio" target="_blank">
-              <img
-              src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
-              />
-            </a>
-            <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/" target="_blank">
-              <img
-              src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
-              />
-            </a>
-            <a href="https://leetcode.com/omelette-bio/" target="_blank">
-              <img
-              src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
-              />
-            </a>
-            <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
-              <img
-              src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
-              />
-            </a> -->
-          </div>
-          </div>
+      <div class="header flex-col-center">
+        <p class="sub-text color1">[ omelette-bio ]</p>
+        <h1>Francois Flandin.</h1>
+        <p class="sub-text color2">
+          Étudiant en L3 info d’Université Côte d’Azur,<br>passioné d'informatique, de développement bas niveau, ainsi que d'architecture des ordinateurs.
+        </p>
+        <div>
+          <ul class="links color3">
+            <li>[ <a href="docs/cv_light.pdf" download target="_blank">mon cv</a> ]</li>
+            <li>[ <a href="https://github.com/omelette-bio" target="_blank">github</a> ]</li>
+            <li>[ <a>linkedin</a> ]</li>
+          </ul>
+          <!-- <a href="docs/cv_light.pdf" download>
+            <img
+            src="https://img.shields.io/badge/mon%20cv-EA4C89?style=for-the-badge"
+            />
+          </a>
+          <a href="https://github.com/omelette-bio" target="_blank">
+            <img
+            src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
+            />
+          </a>
+          <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/" target="_blank">
+            <img
+            src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
+            />
+          </a>
+          <a href="https://leetcode.com/omelette-bio/" target="_blank">
+            <img
+            src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
+            />
+          </a>
+          <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
+            <img
+            src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
+            />
+          </a> -->
         </div>
+      </div>
     </header>
     <section>
-      <div class="sub-section">
-        <h2 class="color1">À propos</h2>
-        <p class="test">
-          Étudiant en L3 informatique d’Université Côte d’Azur, je suis
-          passionné par l’informatique et les nouvelles technologies, et plus
-          particulièrement dans le développement bas niveau ainsi que
-          l'architecture des ordinateurs<br>Je suis également passionné par les
-          jeux vidéos, les mangas et écouter de la musique.
-      </p>
-      </div>
       <!-- compétences -->
       <div class="sub-section">
         <h2 class="color1">Compétences</h2>
@@ -102,6 +89,9 @@
             </p>
           </li>
           <li>[ Langues ] Anglais (B2)</li>
+          <li>[ Autres ]</li>
+          <li class="li-component">- Conception de micro architecture de processeurs</li>
+          <li class="li-component">- Programmation système</li>
         </ul>
         <!-- <ul>
           <li>
