--- a/index.html
+++ b/index.html
@@ -37,92 +37,13 @@
             <li>[ <a href="https://github.com/omelette-bio" target="_blank">github</a> ]</li>
             <li>[ <a>linkedin</a> ]</li>
           </ul>
-          <!-- <a href="docs/cv_light.pdf" download>
-            <img
-            src="https://img.shields.io/badge/mon%20cv-EA4C89?style=for-the-badge"
-            />
-          </a>
-          <a href="https://github.com/omelette-bio" target="_blank">
-            <img
-            src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
-            />
-          </a>
-          <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/" target="_blank">
-            <img
-            src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
-            />
-          </a>
-          <a href="https://leetcode.com/omelette-bio/" target="_blank">
-            <img
-            src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
-            />
-          </a>
-          <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
-            <img
-            src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
-            />
-          </a> -->
         </div>
       </div>
     </header>
     <section>
-      <!-- compétences -->
-      <div class="sub-section">
-        <h2 class="color1">Compétences</h2>
-        <ul class="comps">
-          <li>[ Frontend ]</li>
-          <li>
-            <p>
-              <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
-              <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
-              <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/>
-            </p>
-          </li>
-          <li>[ Programmation ]</li>
-          <li>
-            <p>
-              <img src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"/>
-              <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"/>
-              <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
-              <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
-              <img src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"/>
-            </p>
-          </li>
-          <li>[ Langues ] Anglais (B2)</li>
-          <li>[ Autres ]</li>
-          <li class="li-component">- Conception de micro architecture de processeurs</li>
-          <li class="li-component">- Programmation système</li>
-        </ul>
-        <!-- <ul>
-          <li>
-            <h3>Frontend:</h3>
-            <div class="comps">
-              <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
-              <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
-              <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/>
-            </div>
-          </li>
-          <li>
-            <h3>Programmation:</h3>
-            <div class="comps">
-              <img src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"/>
-              <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"/>
-              <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"/>
-              <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"/>
-              <img src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"/>
-            </div>
-          </li>
-          <li>
-            <h3>Text formatting:</h3>
-            <div class="comps">
-              <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"/>
-            </div>
-          </li>
-        </ul> -->
-      </div>
       <!-- formations -->
       <div class="sub-section">
-        <h2 class="color1">Formations</h2>
+        <h2 class="color1">[ Formations ]</h2>
         <article>
           <a href="https://upinfo.univ-cotedazur.fr">
             <h3 class="link">Université Nice Côte d'Azur [2021 - 2024]</h3>
@@ -132,10 +53,22 @@
           </p>
         </article>
       </div>
+      <!-- compétences -->
+      <div class="sub-section">
+        <h2 class="color1">[ Compétences ]</h2>
+        <ul class="comps">
+          <li id="mg1">[ Frontend ] HTML, CSS, JAVASCRIPT</li>
+          <li>[ Programmation ] Python, Rust, C, Java, Ocaml</li>
+          <li>[ Langues ] Anglais (B2)</li>
+          <li>[ Autres ]</li>
+          <li class="li-component">- Conception de micro architecture de processeurs</li>
+          <li class="li-component">- Programmation système</li>
+        </ul>
+      </div>
 
       <!-- projets univ -->
       <div class="sub-section">
-        <h2 class="color1">Projets Universitaires</h2>
+        <h2 class="color1">[ Projets Universitaires ]</h2>
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
             <h3 class="link">Bataille Navale [12.2022]</h3>
@@ -236,37 +169,6 @@
           [ <a href="https://discordapp.com/users/381898390662807565">discord</a>]
         </li>
       </ul>
-      <!-- <div>
-        <a href="mailto:flandinfrancois@proton.me">
-          <img
-            src="https://img.shields.io/badge/ProtonMail-8B89CC?style=for-the-badge&logo=protonmail&logoColor=white"
-          />
-        </a>
-        <a href="https://discordapp.com/users/381898390662807565">
-          <img
-            src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white"
-          />
-        </a>
-        <a href="https://steamcommunity.com/id/omelette-bio/">
-          <img
-            src="https://img.shields.io/badge/Steam-000000?style=for-the-badge&logo=steam&logoColor=white"
-          />
-        </a>
-        <a
-          href="https://account.xbox.com/fr-fr/Profile?xr=mebarnav&rtc=1&csrf=bu2Mh0WOHa1C6q1XrpQX59PlfFTQY_vqbIRiiTcjBzS4c7usjZQJs_F2ZTqzUJJnhKSlv5hgt0CdBrIWIzaktxOVyFg1&wa=wsignin1.0"
-        >
-          <img
-            src="https://img.shields.io/badge/Xbox-107C10?style=for-the-badge&logo=xbox&logoColor=white"
-          />
-        </a>
-        <a
-          href="https://open.spotify.com/user/zezwiafwzq7l4pl1onljkzcqz?si=db177d2914164c6e"
-        >
-          <img
-            src="https://img.shields.io/badge/Spotify-1ED760?style=for-the-badge&logo=spotify&logoColor=white"
-          />
-        </a>
-      </div> -->
       <p class="bottom-text color2">Développé par Francois Flandin</p>
     </footer>
   </body>
