modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         <p class="sub-text color1">[ omelette-bio ]</p>
         <h1>Francois Flandin.</h1>
         <p class="sub-text color2">
-          Étudiant en L3 info d’Université Côte d’Azur,<br>passioné d'informatique, de développement bas niveau, ainsi que d'architecture des ordinateurs.
+          CS student at University Côte d’Azur,<br>passionate about computer science, low level development, and computer architecture.
+          <!-- Étudiant en L3 info d’Université Côte d’Azur,<br>passioné d'informatique, de développement bas niveau, ainsi que d'architecture des ordinateurs. -->
         </p>
         <div>
           <ul class="links color3">
-            <li>[ <a href="docs/cv_light.pdf" download target="_blank">mon cv</a> ]</li>
+            <li>[ <a href="docs/cv_light.pdf" download target="_blank"><!--mon cv-->my resume</a> ]</li>
             <li>[ <a href="https://github.com/omelette-bio" target="_blank">github</a> ]</li>
             <li>[ <a>linkedin</a> ]</li>
           </ul>
@@ -43,80 +44,128 @@
     <section>
       <!-- formations -->
       <div class="sub-section">
-        <h2 class="color1">[ Formations ]</h2>
+        <h2 class="color1">
+          [ course ]
+          <!-- [ formations ] -->
+        </h2>
         <article>
           <a href="https://upinfo.univ-cotedazur.fr">
-            <h3 class="link">Université Nice Côte d'Azur [2021 - 2024]</h3>
+            <h3 class="link">
+              University Nice Côte d'Azur [2021 - 2024]
+            </h3>
           </a>
           <p>
-            Licence informatique<br>Membre du club informatique durant l'année 2023 - 2024
+            <!-- Licence informatique<br>Membre du club informatique durant l'année 2023 - 2024 -->
+            Computer Science Licence<br>Member of the computer club during the year 2023 - 2024
           </p>
         </article>
       </div>
       <!-- compétences -->
       <div class="sub-section">
-        <h2 class="color1">[ Compétences ]</h2>
+        <h2 class="color1">
+          <!-- [ compétences ] -->
+          [ skills ]
+        </h2>
         <ul class="comps">
           <li id="mg1">[ Frontend ] HTML, CSS, JAVASCRIPT</li>
-          <li>[ Programmation ] Python, Rust, C, Java, Ocaml</li>
-          <li>[ Langues ] Anglais (B2)</li>
-          <li>[ Autres ]</li>
-          <li class="li-component">- Conception de micro architecture de processeurs</li>
-          <li class="li-component">- Programmation système</li>
+          <li>[ Programming ] Python, Rust, C, Java, Ocaml</li>
+          <li>[ Languages ] Anglais (B2)</li>
+          <li>[ Others ]</li>
+          <li class="li-component">
+            <!-- - Conception de micro architecture de processeurs -->
+            - Processor micro architecture design
+          </li>
+          <li class="li-component">
+            <!-- - Programmation système -->
+            - System programming
+          </li>
+          <li class="li-component">
+            <!-- - Programmation orientée objet -->
+            - Object oriented programming
+          </li>
+          <li class="li-component">
+            <!-- - Programmation fonctionnelle -->
+            - Functional programming
+          </li>
+          <li class="li-component">
+            - Git, Linux, Windows, Bash, NeoVim, VSCode, Discord.py
+          </li>
         </ul>
       </div>
 
       <!-- projets univ -->
       <div class="sub-section">
-        <h2 class="color1">[ Projets Universitaires ]</h2>
+        <h2 class="color1">
+          [ university projects ]
+          <!-- [ projets universitaires ] -->
+        </h2>
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
-            <h3 class="link">Bataille Navale [12.2022]</h3>
+            <h3 class="link">
+              battleship [12.2022]
+              <!-- Bataille Navale [12.2022] -->
+            </h3>
           </a>
           <p>
-            Projet de fin de semestre de l'ue structures de données et
-            programmation C.
+            End of semester project of the data structures and C programming course
+            <!-- Projet de fin de semestre de l'ue structures de données et programmation C. -->
           </p>
         </article>
         <article>
           <a href="https://github.com/omelette-bio/mrsync">
-            <h3 class="link">mrsync [05.2023]</h3>
+            <h3 class="link">
+              mrsync [05.2023]
+            </h3>
             
           </a>
           <p>
-            Projet de fin de semestre de l'ue programmation système, consistant
-            à faire un mini rsync, fonctionne uniquement en local
+            End of semester project of the system programming course, consisting of making a mini rsync, only works locally
+            <!-- Projet de fin de semestre de l'ue programmation système, consistant à faire un mini rsync, fonctionne uniquement en local -->
           </p>
         </article>
         <article>
           <a href="https://github.com/omelette-bio/projet-concept-ia">
-            <h3 class="link">Concepts IA [05.2023]</h3>
+            <h3 class="link">
+              <!-- Concepts IA [05.2023] -->
+              ai concepts [05.2023]
+            </h3>
             
           </a>
           <p>
-            Projet de fin de semestre de l'ue concepts de l'intelligence
-            artificielle, consistant à faire un programme créant des graphes de
-            résolution de problèmes
+            End of semester project of the ai concepts course, consisting of making a program creating problem solving graphs
+            <!-- Projet de fin de semestre de l'ue concepts de l'intelligence artificielle, 
+            consistant à faire un programme créant des graphes de
+            résolution de problèmes -->
           </p>
         </article>
         <article>
           <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
-            <h3 class="link">RPG textuel [09.2023]</h3>
+            <h3 class="link">
+              <!-- RPG textuel [09.2023] -->
+              text rpg [09.2023]
+            </h3>
           </a>
           <p>
-            Premier projet de l'ue programmation et conception orientée objet, consistant à
+            First project of the object oriented programming and design course, consisting of making a simple rpg in java, 
+            in order to get familiar with object oriented programming.
+            <!-- Premier projet de l'ue programmation et conception orientée objet, consistant à
             faire un petit rpg simple en java, afin de se familiariser avec la
-            programmation orientée objet.
+            programmation orientée objet. -->
           </p>
         </article>
         <article>
           <a href="#">
-            <h3 class="link">Convertisseur Midi -> wav [10.2023]</h3>
+            <h3 class="link">
+              <!-- Convertisseur Midi -> wav [10.2023] -->
+              midi to wav converter [10.2023]
+            </h3>
           </a>
           <p>
-            Deuxième projet de l'ue programmation et conception orientée objet, consistant à
+            Second project of the object oriented programming and design course, consisting of making a midi to wav file converter,
+            in order to learn how to use external libraries.
+            <!-- Deuxième projet de l'ue programmation et conception orientée objet, consistant à
             faire un convertisseur de fichier midi en fichier wav, afin
-            d'apprendre à utiliser des libraries externes.
+            d'apprendre à utiliser des libraries externes. -->
           </p>
         </article>
       </div>
@@ -169,7 +218,10 @@
           [ <a href="https://discordapp.com/users/381898390662807565">discord</a>]
         </li>
       </ul>
-      <p class="bottom-text color2">Développé par Francois Flandin</p>
+      <p class="bottom-text color2">
+        <!-- Développé par Francois Flandin -->
+        Developed by Francois Flandin
+      </p>
     </footer>
   </body>
 </html>
