new file:   docs/Consolas.ttf 	new file:   docs/Consolas.woff 	modified:   index.css 	modified:   index.html 	modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           [ skills ]
         </h2>
         <ul class="comps">
-          <li id="mg1">[ Frontend ] HTML, CSS, JAVASCRIPT</li>
-          <li>[ Programming ] Python, Rust, C, Java, Ocaml</li>
-          <li>[ Languages ] Anglais (B2)</li>
+          <li id="mg1">[ Frontend ]<span> HTML, CSS, JAVASCRIPT</span></li>
+          <li>[ Programming ]<span> Python, Rust, C, Java, Ocaml</span></li>
+          <li>[ Languages ]<span> Anglais (B2)</span></li>
           <li>[ Others ]</li>
           <li class="li-component">
             <!-- - Conception de micro architecture de processeurs -->
